--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -12,12 +12,12 @@
 
 {% if related_posts.size > 0 %}
 <aside class="related mb4" role="complementary">
-  <h2 class="hr">{{ site.data.strings.related_posts | default:"Related Posts" }}</h2>
+<!--  <h2 class="hr">{{ site.data.strings.related_posts | default:"Related Posts" }}</h2>-->
 
-  <ul class="related-posts">
+<!--  <ul class="related-posts">-->
     {% for post in related_posts limit:3 %}
       {% include post-list-item.html post=post %}
     {% endfor %}
-  </ul>
+<!--  </ul>-->
 </aside>
 {% endif %}
