--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -1,23 +1,23 @@
 {% assign post = include.post %}
 
 {% if site.hydejack.use_lsi or site.use_lsi %}
-{% assign related_posts = site.related_posts %}
-{% elsif post.categories and post.categories.first %}
-{% assign related_posts = site.categories[post.categories.first] | where_exp:"item", "item.url != include.post.url" %}
-{% elsif post.tags and post.tags.first %}
-{% assign related_posts = site.tags[post.tags.first] | where_exp:"item", "item.url != include.post.url" %}
+  {% assign related_posts = site.related_posts %}
+{% elsif post.categories.first %}
+  {% assign related_posts = site.categories[post.categories.first] | where_exp:"post", "post.url != page.url" %}
+{% elsif post.tags.first %}
+  {% assign related_posts = site.tags[post.tags.first] | where_exp:"post", "post.url != page.url" %}
 {% else %}
-{% assign related_posts = site.related_posts %}
+  {% assign related_posts = site.related_posts %}
 {% endif %}
 
 {% if related_posts.size > 0 %}
 <aside class="related mb4" role="complementary">
-    <!-- <h2 class="hr">{{ site.data.strings.related_posts | default:"Related Posts" }}</h2> -->
+  <h2 class="hr">{{ site.data.strings.related_posts | default:"Related Posts" }}</h2>
 
-    <!-- <ul class="related-posts"> -->
+  <ul class="related-posts">
     {% for post in related_posts limit:3 %}
-    {% include post-list-item.html post=post %}
+      {% include post-list-item.html post=post %}
     {% endfor %}
-    <!-- </ul> -->
+  </ul>
 </aside>
 {% endif %}
