--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -25,11 +25,11 @@ layout: base
 {% assign posts = site.categories[page.slug] | default:site.tags[page.slug] | default:site.posts %}
 
 {% if page.title.size > 0 %}
-  <header>
-    <h1 class="page-title">{{ page.title }}</h1>
-    {% include message.html text=page.description hide=page.hide_description %}
-  </header>
-  <hr class="sr-only"/>
+<header>
+  <h1 class="page-title">{{ page.title }}</h1>
+  {% include message.html text=page.description hide=page.hide_description %}
+</header>
+<hr class="sr-only"/>
 {% endif %}
 
 {{ content }}
@@ -39,12 +39,12 @@ layout: base
 {% assign list_entry    = date_formats.list_entry    | default:"%d %b" %}
 
 {% for post in posts %}
-  {% assign currentdate = post.date | date:list_group_by %}
-  {% if currentdate != date %}
-    {% unless forloop.first %}</ul>{% endunless %}
-<!--    <h2 id="{{ list_group_by | slugify }}-{{ currentdate | slugify }}" class="hr">{{ currentdate }}</h2>-->
-<!--    <ul class="related-posts">-->
-    {% assign date = currentdate %}
+{% assign currentdate = post.date | date:list_group_by %}
+{% if currentdate != date %}
+{% unless forloop.first %}</ul>{% endunless %}
+<h2 id="{{ list_group_by | slugify }}-{{ currentdate | slugify }}" class="hr">{{ currentdate }}</h2>
+<ul class="related-posts">
+  {% assign date = currentdate %}
   {% endif %}
   {% include post-list-item.html post=post format=list_entry %}
   {% if forloop.last %}</ul>{% endif %}
