--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,6 +10,7 @@
     <div class="{{ bg_class }}" style="{{ bg_style }}"></div>
 
     <div class="sidebar-sticky">
+      <div class="sidebar-about-container">
       <div class="sidebar-about">
         <h2 class="h1"><a href="{{ '/' | relative_url }}">{{ site.title }}</a></h2>
         {% assign text = site.tagline | default:site.description %}
@@ -20,6 +21,14 @@
         {% endif %}
       </div>
 
+<!--      <div class="sidebar-box">-->
+<!--        {% if author.picture %}-->
+<!--          {% include srcset-img.html class="avatar" img=author.picture alt=author.name %}-->
+<!--        {% endif %}-->
+<!--      </div>-->
+      </div>
+
+      <div class="sidebar-nav-container">
       <nav class="sidebar-nav heading" role="navigation">
         {% include nav.html %}
       </nav>
@@ -28,6 +37,7 @@
 
       <div class="sidebar-social">
         {% include social.html author=author %}
+      </div>
       </div>
     </div>
   </header>
