--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,11 +21,11 @@
         {% endif %}
       </div>
 
-<!--      <div class="sidebar-box">-->
-<!--        {% if author.picture %}-->
-<!--          {% include srcset-img.html class="avatar" img=author.picture alt=author.name %}-->
-<!--        {% endif %}-->
-<!--      </div>-->
+      <div class="sidebar-box">
+        {% if author.picture %}
+          {% include srcset-img.html class="avatar" img=author.picture alt=author.name %}
+        {% endif %}
+      </div>
       </div>
 
       <div class="sidebar-nav-container">
