--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -4,6 +4,17 @@
   padding: 1rem;
 }
 
+// 사이드바 상단 섹션 중앙 정렬
+.sidebar-about {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.sidebar-box {
+  text-align: center;
+  margin: 1rem 0;
+}
+
 .sidebar-sticky {
   height: 100%;
   padding-top: 1rem;
