--- a/_sass/hydejack/_avatar.pre.scss
+++ b/_sass/hydejack/_avatar.pre.scss
@@ -20,11 +20,11 @@
 
 .avatar {
   // <<< inline
-  float: right;
+  display: block;
   width: 6.5rem;
   height: 6.5rem;
   border-radius: 100%;
-  margin-left: .5rem;
+  margin: 0 auto 1rem;
   // >>>
   position: relative; // link
   z-index: 1; // link
